--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Para Ale 💌</title>
+  <title>Para mi princesa 💌</title>
   <style>
     body {
       background: linear-gradient(to right, #fbc2eb, #a6c1ee);
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">Para ti, Ale 💖</div>
+    <div class="title">Para mi princesa </div>
     <div class="poem">
       En cada palabra suspiro,  
       en cada silencio, te pienso,  
